@@ -179,7 +179,13 @@ None.
     Example:
 
     #INTERFACE	SOURCE	   ADDRESS
-    eth0	0.0.0.0/0  206.124.146.177-206.124.146.179:persistent	
+    eth0	0.0.0.0/0  206.124.146.177-206.124.146.179:persistent
+
+    This feature requires Persistent SNAT support in your kernel and
+    iptables. 
+
+    If you use a capabilities file, you will need to create a new one
+    as a result of this feature.	
 
 ----------------------------------------------------------------------------
                  N E W   F E A T U R E S   I N   4 . 4
